--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Zed\\Framework\\": "./"
+            "Zed\\Framework\\": "src/"
         }
     },
     "authors": [
